fix(checkbox): correct spacing on native element

--- a/tegel/src/components/checkbox/checkbox.scss
+++ b/tegel/src/components/checkbox/checkbox.scss
@@ -24,7 +24,7 @@
 
     + label {
       color: var(--sdds-checkbox-color);
-      padding-left: var(--sdds-spacing-element-8);
+      padding-left: var(--sdds-spacing-element-4);
       padding-top: var(--sdds-spacing-element-4);
       padding-bottom: var(--sdds-spacing-element-4);
       cursor: pointer;
